# nlp-text-summarizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: cache.py  config.py  exceptions.py  logging_config.py  main.py  metrics.py  middleware.py
app/models/: schemas.py
app/routers/: summarize.py
app/services/: abstractive.py  base.py  circuit_breaker.py  extractive.py
docs/: deployment.md  plan.md
k8s/: deployment.yaml  hpa.yaml  pvc.yaml  service.yaml
tests/: test_api.py  test_services.py
